[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
hecs = { workspace = true }
rapier2d = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
